--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="contact">
         
         <h1 class="heading">CONTACT ME</h1>
-        <form action="" method="POST" class="form">
+        <form action="a href=mailto:dilumilin@gmail.com" method="POST" class="form">
             
                 <i>If you are interested to contact me,feel free to send an email to me on <u>dilumilin@gmail.com</u></i>
                 <i>You can call me at <u>9847208169</u></i><br>
